--- a/React_Native_Project_1/package.json
+++ b/React_Native_Project_1/package.json
@@ -10,8 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-flash-message": "^0.3.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -22,6 +29,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
