--- a/React_Native_Project_1/package.json
+++ b/React_Native_Project_1/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
+    "react-native-video": "^5.2.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
